Add importer for relevant resources
This required some updates to the "read" function for some resources to ensure that required fields are properly loaded into state.

--- a/templates/resources/config.md.tmpl
+++ b/templates/resources/config.md.tmpl
@@ -14,3 +14,7 @@ Manage a Doppler config.
 {{tffile "examples/resources/config.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Resource ID Format
+
+Resource IDs are in the format `<project-name>.<environment-slug>.<config-name>`.
