--- a/templates/resources/environment.md.tmpl
+++ b/templates/resources/environment.md.tmpl
@@ -14,3 +14,7 @@ Manage a Doppler environment.
 {{tffile "examples/resources/environment.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Resource ID Format
+
+Resource IDs are in the format `<project-name>.<environment-slug>`.
