--- a/templates/resources/secret.md.tmpl
+++ b/templates/resources/secret.md.tmpl
@@ -14,3 +14,7 @@ Manage a single Doppler secret in a config.
 {{tffile "examples/resources/secret.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Resource ID Format
+
+Resource IDs are in the format `<project-name>.<config-name>.<secret-name>`.
