--- a/templates/resources/trusted_ip.md.tmpl
+++ b/templates/resources/trusted_ip.md.tmpl
@@ -7,11 +7,11 @@ description: |-
 
 # doppler_trusted_ip (Resource)
 
-Manage a Doppler config.
+Manage a Doppler trusted IP.
 
 ## Example Usage
 
-{{tffile "examples/resources/config.tf"}}
+{{tffile "examples/resources/trusted_ip.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
 
