Update trusted IP address ID format

--- a/templates/resources/trusted_ip.md.tmpl
+++ b/templates/resources/trusted_ip.md.tmpl
@@ -17,4 +17,4 @@ Manage a Doppler trusted IP.
 
 ## Resource ID Format
 
-Resource IDs are in the format `<project-name>.<config-name>.<ip-address>`.
+Resource IDs are in the format `<project-name>.<config-name>#<ip-address>`.
