Update import docs

--- a/templates/resources/environment.md.tmpl
+++ b/templates/resources/environment.md.tmpl
@@ -15,6 +15,10 @@ Manage a Doppler environment.
 
 {{ .SchemaMarkdown | trimspace }}
 
-## Resource ID Format
+## Import
 
-Resource IDs are in the format `<project-name>.<environment-slug>`.
+Import is supported using the following syntax:
+
+```shell
+terraform import doppler_environment.default <project-name>.<environment-slug>
+```
