--- a/templates/resources/secret.md.tmpl
+++ b/templates/resources/secret.md.tmpl
@@ -15,6 +15,10 @@ Manage a single Doppler secret in a config.
 
 {{ .SchemaMarkdown | trimspace }}
 
-## Resource ID Format
+## Import
 
-Resource IDs are in the format `<project-name>.<config-name>.<secret-name>`.
+Import is supported using the following syntax:
+
+```shell
+terraform import doppler_secret.default <project-name>.<config-name>.<secret-name>
+```
