--- a/templates/resources/service_account.md.tmpl
+++ b/templates/resources/service_account.md.tmpl
@@ -14,3 +14,13 @@ Manage a Doppler service account.
 {{tffile "examples/resources/service_account.tf"}}
 
 {{ .SchemaMarkdown | trimspace }}
+
+## Import
+
+Import is supported using the following syntax:
+
+```shell
+# import using the service account slug from the URL:
+# https://dashboard.doppler.com/workplace/[workplace-slug]/team/service_accounts/[service-account-slug]
+terraform import doppler_service_account.default <service-account-slug>
+```
