--- a/templates/resources/config.md.tmpl
+++ b/templates/resources/config.md.tmpl
@@ -15,6 +15,10 @@ Manage a Doppler config.
 
 {{ .SchemaMarkdown | trimspace }}
 
-## Resource ID Format
+## Import
 
-Resource IDs are in the format `<project-name>.<environment-slug>.<config-name>`.
+Import is supported using the following syntax:
+
+```shell
+terraform import doppler_config.default <project-name>.<environment-slug>.<config-name>
+```
