Update doppler_environments docs to match existing doc format

--- a/templates/data-sources/environments.md.tmpl
+++ b/templates/data-sources/environments.md.tmpl
@@ -1,35 +1,16 @@
-# doppler_environments
+---
+page_title: "doppler_environments Data Source - terraform-provider-doppler"
+subcategory: "Project Structure"
+description: |-
+  Retrieve all environments in the project.
+---
 
-Use this data source to get information about all environments in a Doppler project.
+# doppler_environments (Data Source)
+
+Retrieve all environments in the project.
 
 ## Example Usage
 
-```hcl
-data "doppler_environments" "all" {
-  project = "my-project"
-}
+{{tffile "examples/data-sources/environments.tf"}}
 
-output "environment_names" {
-  value = [for env in data.doppler_environments.all.list : env.name]
-}
-
-output "environment_slugs" {
-  value = [for env in data.doppler_environments.all.list : env.slug]
-}
-```
-
-## Argument Reference
-
-The following arguments are supported:
-
-* `project` - (Required) The project to list environments for.
-
-## Attributes Reference
-
-In addition to all arguments above, the following attributes are exported:
-
-* `list` - List of environments in the project. Each environment has the following attributes:
-  * `slug` - The slug of the environment.
-  * `name` - The name of the environment.
-  * `project` - The project the environment belongs to.
-  * `created_at` - When the environment was created. 
+{{ .SchemaMarkdown | trimspace }}
